--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
-  background: #ccb66f;
-  color: #09023b;
+  background: #F5F1E8;
+  color: #1A1A1A;
   font-family: 'Times New Roman', Times, serif;
 }
 
@@ -62,3 +62,4 @@ body {
   text-decoration: none;
 
 }
+
