--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   background: #F5F1E8;
-  color: #1A1A1A;
+  color: #141414;
   font-family: 'Times New Roman', Times, serif;
 }
 
@@ -62,4 +62,5 @@ body {
   text-decoration: none;
 
 }
+
 
